--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,7 @@ spring.datasource.url=jdbc:oracle:thin:@//localhost:1521/xepdb1?useUnicode=true&
 spring.datasource.username=detective
 spring.datasource.password=1234
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=truegi
+spring.jpa.properties.hibernate.format_sql=true
 spring.jni.file.encoding=UTF-8
-
-
